header effect change

--- a/Register-now.html
+++ b/Register-now.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <header class="glassmorphism" id="header">
+    <header class="" id="header">
         <section id="header-section">
             <div id="logo">
                 <img src="./pictures/LOGO.png" alt="Logo" id="header-logo">
