--- a/Register-now.html
+++ b/Register-now.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Now</title>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" href="/register-now.css">
+    <link rel="stylesheet" href="./register-now.css">
 
 
 </head>
