--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>BMCIT</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab" rel="stylesheet" type="text/css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet" type="text/css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
