added links to nav bar

--- a/Home.html
+++ b/Home.html
@@ -19,14 +19,14 @@
     <header class="" id="header">
         <section id="header-section">
             <div id="logo">
-                <img src="./pictures/LOGO.png" alt="Logo" id="header-logo">
+                <img src="./pictures/logowhite.png" alt="Logo" id="header-logo">
             </div>
 
             <nav class="nav-menu" id="nav-menu-header">
-                <li><a href="./Home.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="./Register-now.html">Contact</a></li>
+                <li><a href="./Home.html" class="active-navmenu">Home</a></li>
+                <li><a href="./About.html" class="inactive-navmenu">About</a></li>
+                <li><a href="#" class="inactive-navmenu">Courses</a></li>
+                <li><a href="./Register-now.html" class="inactive-navmenu">Contact</a></li>
             </nav>
 
             <div class="header-button">
